--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,3 +65,28 @@ stages:
 
     - publish: '$(Build.ArtifactStagingDirectory)'
       artifact: drop
+
+- stage: 'Dev'
+  displayName: 'Deploy to the dev environment'
+  dependsOn: Build
+  condition:  succeeded()
+  jobs:
+  - deployment: Deploy
+    pool:
+      vmImage: 'ubuntu-20.04'
+    environment: dev
+    variables:
+    - group: Release
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - download: current
+            artifact: drop
+          - task: AzureWebApp@1
+            displayName: 'Azure App Service Deploy: dev website'
+            inputs:
+              azureSubscription: 'Azure subscription 1(1)(57189c88-1d8a-4557-83b4-475da73dbb62)'
+              appType: 'webAppLinux'
+              appName: 'tailspin-space-game-web-dev-7673'
+              package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
